// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MovieTile renders all details 1`] = `
<DocumentFragment>
  <a
    class="link"
    href="/123"
  >
    <div
      class="container"
    >
      <img
        alt=""
        class="image"
        src="imageUrl"
      />
      <div
        class="detailsContainer"
      >
        <div
          class="title"
        >
          testName
        </div>
        <div
          class="releaseYear"
        >
          testYear
        </div>
      </div>
      <div
        class="relevantGenres"
      >
        genre1 & genre2
      </div>
    </div>
  </a>
</DocumentFragment>
`;

exports[`MovieTile renders with required props 1`] = `
<DocumentFragment>
  <a
    class="link"
    href="/123"
  >
    <div
      class="container"
    >
      <img
        alt=""
        class="image"
        src="imageUrl"
      />
      <div
        class="detailsContainer"
      >
        <div
          class="title"
        >
          testName
        </div>
        <div
          class="releaseYear"
        >
          testYear
        </div>
      </div>
    </div>
  </a>
</DocumentFragment>
`;
